--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongodb": "^2.2.33"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
